# mineria_de_datos

./: .gitignore  pyproject.toml
1_data_cleaning/: dataset_limpio.csv  limpieza.ipynb
2_descriptive_statistics/: estadisticas.ipynb
3_data_visualization/: visualizaciones.ipynb
4_statistical_tests/: pruebas_estadisticas.ipynb
5_linear_models_correlation/: modelos_lineales.ipynb
6_data_classification/: clasificacion_knn.ipynb
7_data_clustering/: wine_clustering.ipynb
8_forecasting/: forcasting.ipynb
9_text_analysis/: wordcloud_analysis.ipynb
