[project]
name = "mineria-data-cleaning"
version = "0.1.0"
description = "Actividad 1: Limpieza de datos para IMDB dataset"
requires-python = ">=3.10"

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0"
]
